added logo and styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="./css/styles.css">
-		<script type="text/javascript" src="./scripts/scripts.js"></script>
-	</head>
-	<body>
-	
-	</body>
+
+<head>
+	<link rel="stylesheet" type="text/css" href="./css/styles.css">
+	<script type="text/javascript" src="./scripts/scripts.js"></script>
+</head>
+
+<body>
+	<header>
+		<a class="logo" href="file:///C:/www/w3schools/index.html">
+			LOGO 
+		</a>
+		<nav>
+			<a href="file:///C:/www/w3schools/html/about.html">
+				ABOUT 
+			
+			</a>
+		</nav>
+	</header>
+	<div>
+		<a class="logo">
+			LOGO
+		</a>
+	</div>
+	<footer>
+		<a class="logo">
+			LOGO
+		</a>
+	</footer>
+</body>
+
 </html>
-	
