added home and about pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<script type="text/javascript" src="./scripts/scripts.js"></script>
 	</head>
 	<body>
-	
+		home
+		<a href="file:///Users/narcoticvelveteen/dev/test-site/html/about.html">
+			let's go about it
+
+		</a>
 	</body>
 </html>
 	
