added name function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 	<link rel="stylesheet" type="text/css" href="./css/styles.css">
-	<script type="text/javascript" src="./scripts/scripts.js"></script>
 </head>
 
 <body>
@@ -23,11 +22,16 @@
 			LOGO
 		</a>
 	</div>
+<div id="content" class="content">
+
+</div>
 	<footer>
 		<a class="logo">
 			LOGO
 		</a>
 	</footer>
+	<script type="text/javascript" src="./scripts/scripts.js"></script>
+
 </body>
 
 </html>
